$Id: NEWS,v 1.920 2008-08-06 17:00:40 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Added Chinese translation
- Bug 3073 - Command arguments not decoded properly in some places.
- Bug 3076 - RPM build failing on 64 bit OS due to incomplete .spec.
- Bug 3082 - Use "DEFAULT" keyword instead of "ALL" for Trace directive.
  Hopefully the "DEFAULT" keyword will be more accurate, more descriptive
  of the actual functionality triggered by the keyword.
- Bug 3083 - Multiple issues with handling of <Class> definitions.
- Bug 3077 - Transparently handle the X-variant commands when checking
  <Limit> permissions.
- Bug 3036 - Quota information not persisted if session ends abruptly.
- Bug 3094 - Perform unidirectional SSL/TLS shutdown on data connections.
- Bug 3096 - libcap version errors on newer Linux kernel.

1.3.2rc1 - Released 15-Apr-2008
--------------------------------
- Bug 2978 - Support more verbose OpenSSL diagnostic logging.  There is now
  support for an "EnableDiags" TLSOptions setting, which logs a lot of
  SSL/TLS protocol information to the TLSLog.
- Bug 2969 - Allow APPE after REST.
- Bug 2983 - Use getgrouplist(3) for group lookup, if available.  This may
  potentially speed up the group membership lookup on some systems.
- Bug 2984 - mod_auth_file uid2name() does not cache results causing slow LIST
  response.
- Bug 2925 - Add caching of IP address and DNS name lookups.  This may help
  speed up data transfers, especially rapid-fire data transfers as used by
  "download accelerators".
- Bug 2979 - Ability to ban clients which connect too often.  The mod_ban