@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.920 2008-08-06 17:00:40 castaglia Exp $
+$Id: NEWS,v 1.921 2008-08-11 18:33:57 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -23,6 +23,8 @@ CVS
 - Bug 3036 - Quota information not persisted if session ends abruptly.
 - Bug 3094 - Perform unidirectional SSL/TLS shutdown on data connections.
 - Bug 3096 - libcap version errors on newer Linux kernel.
+- Bug 3074 - Support configure option for pkgconfig .pc file install
+  location.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
